deploy/medulla/templates/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medulla-frontend
  namespace: medulla-system
  labels:
    name: medulla-frontend
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    name: medulla-frontend
